Code Correction For General person Address

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/BindAddressToPostalCode/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/BindAddressToPostalCode/_List.cshtml
@@ -16,7 +16,7 @@
     @Html.Hidden("PersonId", Model.PersonId)
     @Html.Hidden("EntityId", Model.EntityId)
     @Html.Hidden("AddressData", Model.AddressData)
-    @Html.Hidden("Postalcode")
+    @Html.Hidden("Postalcode", Model.Pincode)
     @Html.Hidden("AddressTypeEnum", Model.AddressTypeEnum)
     <div class="modal-body">
         <div class="row">
@@ -69,70 +69,5 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
     </div>
 }
-<script>
-       $(document).ready(function () {
-        const $form = $('#frmSendDetails');
-
-        $form.on('submit', function (e) {
-            e.preventDefault();
-
-            const selected = $form.find('input[name="SelectedAddress"]:checked').val();
-            if (!selected) {
-                alert("Please select an address before saving.");
-                return;
-            }
-
-            CoditechCommon.ShowLodder();
-            $('#postalCodeModal').modal('hide');
-
-            const parts = selected.split('|');
-            const userAddress = {
-                Name: parts[0] || '',
-                District: parts[1] || '',
-                Division: parts[2] || '',
-                State: parts[3] || '',
-                Country: parts[4] || '',
-                Pincode: parts[5] || ''
-            };
-
-            const backendData = {
-                Postalcode: $form.find('input[name="Postalcode"]').val(),
-                PersonId: $form.find('input[name="PersonId"]').val(),
-                EntityId: $form.find('input[name="EntityId"]').val(),
-                EntityType: $form.find('input[name="EntityType"]').val(),
-                ControllerName: $form.find('input[name="ControllerName"]').val(),
-                GeneralCountryMasterId: $form.find('select[name="GeneralCountryMasterId"]').val(),
-                AddressTypeEnum: $form.find('input[name="AddressTypeEnum"]').val(),
-                AddressLine1: $form.find('textarea[name="AddressLine1"]').val(),
-                AddressLine2: $form.find('textarea[name="AddressLine2"]').val(),
-                FirstName: $form.find('input[name="FirstName"]').val(),
-                MiddleName: $form.find('input[name="MiddleName"]').val(),
-                LastName: $form.find('input[name="LastName"]').val(),
-                EmailAddress: $form.find('input[name="EmailAddress"]').val(),
-                PhoneNumber: $form.find('input[name="PhoneNumber"]').val(),
-                MobileNumber: $form.find('input[name="MobileNumber"]').val()
-            };
-
-            const merged = { ...userAddress, ...backendData };
-
-            $.ajax({
-                url: '/GeneralCommon/ValidateAddress',
-                type: 'POST',
-                data: { addressData: JSON.stringify(merged) },
-                success: function (response) {
-                    CoditechCommon.HideLodder();
-                    $('#addressContainer').html(response);
-                },
-                error: function (xhr) {
-                    if (xhr.status == "401" || xhr.status == "403") {
-                        location.reload();
-                    }
-                    CoditechNotification.DisplayNotificationMessage("Failed to display record.", "error");
-                    CoditechCommon.HideLodder();
-                }
-            });
-        });
-    });
-
-</script>
+<script src="~/js/coditech/General/AddressHandler.js"></script>
 
