code check in for save and cancel

--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/CreateEditEmployee.cshtml
@@ -11,6 +11,16 @@
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.EmployeeId > 0 };
     DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, IsDisabled = Model.EmployeeId > 0 };
     DropdownViewModel designationDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Designation.ToString(), DropdownName = "EmployeeDesignationMasterId", DropdownSelectedValue = Convert.ToString(Model.EmployeeDesignationMasterId), IsDisabled = Model.EmployeeId > 0 };
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+            {
+                Title = ViewBag.Title,
+                SaveButtonText = GeneralResources.SaveButtonText,
+                CancelUrl = @Url.Action("List", controllerName),
+                CancelButtonText = GeneralResources.CancelButtonText,
+                ControllerName = controllerName,
+                ActionName = actionName,
+                FormId = AdminConstants.FormId + controllerName,
+            };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -39,8 +49,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
                         {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
                             @Html.HiddenFor(m => m.EmployeeId)
                             @if (Model.EmployeeId > 0)
                             {
@@ -71,10 +82,10 @@
                                 </div>
                             </div>
                             @Html.Partial("~/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml", Model)
-                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = Model.SelectedCentreCode, SelectedDepartmentId = Model.SelectedDepartmentId })"
+                            @* <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = Model.SelectedCentreCode, SelectedDepartmentId = Model.SelectedDepartmentId })"
                                class="btn btn-secondary">
                                 <i class="ft-x"></i>@AdminResources.LabelCancel
-                            </a>
+                            </a> *@
                         }
                     </div>
                 </div>
