--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
@@ -7,6 +7,16 @@
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
     keyValuePairs.Add("EmployeeId", Model.EmployeeId.ToString());
     keyValuePairs.Add("PersonId", Model.PersonId.ToString());
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+            {
+                Title = ViewBag.Title,
+                SaveButtonText = GeneralResources.SaveButtonText,
+                CancelUrl = @Url.Action("EmployeeServiceList", controllerName),
+                CancelButtonText = GeneralResources.CancelButtonText,
+                ControllerName = controllerName,
+                ActionName = actionName,
+                FormId = AdminConstants.FormId + controllerName,
+            };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -32,8 +42,9 @@
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm("UpdateEmployeeService", controllerName, FormMethod.Post))
+                        @using (Html.BeginForm("UpdateEmployeeService", controllerName, FormMethod.Post, new { id = headerModel.FormId }))
                         {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
                             @Html.HiddenFor(m => m.EmployeeId)
                             @Html.HiddenFor(m => m.EmployeeServiceId)
                             @Html.HiddenFor(m => m.PersonId)
@@ -134,12 +145,12 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                       @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                         <a href="@Url.Action("EmployeeServiceList", "EmployeeMaster",
                                                                new { employeeId = Model.EmployeeId, personId = Model.PersonId })"
                            class="btn btn-secondary">
                             <i class="ft-x"></i>@AdminResources.LabelCancel
-                        </a>
+                        </a> *@
                                                 }
                     </div>
                 </div>
