--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
@@ -8,19 +8,19 @@
     keyValuePairs.Add("EmployeeId", Model.EmployeeId.ToString());
     keyValuePairs.Add("PersonId", Model.PersonId.ToString());
     PageHeaderViewModel headerModel = new PageHeaderViewModel
-            {
-                Title = ViewBag.Title,
-                SaveButtonText = GeneralResources.SaveButtonText,
-                CancelUrl = @Url.Action("EmployeeServiceList", controllerName),
-                CancelButtonText = GeneralResources.CancelButtonText,
-                ControllerName = controllerName,
-                ActionName = actionName,
-                FormId = AdminConstants.FormId + controllerName,
-            };
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = @Url.Action("EmployeeServiceList", controllerName, new { employeeId = Model.EmployeeId, personId = Model.PersonId }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-2">
                 @Html.Partial("~/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml", keyValuePairs)
@@ -145,7 +145,7 @@
                             </div>
                         </div>
 
-                       @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                        @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                         <a href="@Url.Action("EmployeeServiceList", "EmployeeMaster",
                                                                new { employeeId = Model.EmployeeId, personId = Model.PersonId })"
                            class="btn btn-secondary">
