--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseUserNameRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseUserNameRegistration.cshtml
@@ -4,15 +4,15 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     PageHeaderViewModel headerModel = new PageHeaderViewModel
-            {
-                Title = ViewBag.Title,
-                SaveButtonText = GeneralResources.SaveButtonText,
-                CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName),
-                CancelButtonText = GeneralResources.CancelButtonText,
-                ControllerName = controllerName,
-                ActionName = actionName,
-                FormId = AdminConstants.FormId + controllerName,
-            };
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = @Url.Action("CentrewiseUserNameRegistrationList", controllerName, new { organisationCentreId = @Model.OrganisationCentreMasterId }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <div class="page-content">
     <div class="container-fluid mt-5">
