--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
@@ -5,15 +5,15 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "HospitalDoctors.GetOrganisationCentrewiseBuildingAndRoomByCentreCode()", IsDisabled = Model.OrganisationCentrewiseBuildingMasterId > 0 };
     PageHeaderViewModel headerModel = new PageHeaderViewModel
-            {
-                Title = ViewBag.Title,
-                SaveButtonText = GeneralResources.SaveButtonText,
-                CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName),
-                CancelButtonText = GeneralResources.CancelButtonText,
-                ControllerName = controllerName,
-                ActionName = actionName,
-                FormId = AdminConstants.FormId + controllerName,
-            };
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = @Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.CentreCode }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <div class="page-content">
     <div class="container-fluid mt-5">
