--- a/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGateways/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGateways/CreateEdit.cshtml
@@ -49,8 +49,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                           @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
                         }
                     </div>
                 </div>
