--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_SaveAndCloseButtonLayout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_SaveAndCloseButtonLayout.cshtml
@@ -6,34 +6,38 @@
         <h4 style="margin:0;">@Model.Title</h4>
         <!-- Save / Cancel Buttons -->
         <div style="display:flex; gap:8px;">
-            @if(!string.IsNullOrEmpty(@Model.CancelUrl)){
-            <a href="@Model.CancelUrl" class="btn btn-secondary">@Model.CancelButtonText</a>
+            @if (!string.IsNullOrEmpty(@Model.CancelUrl))
+            {
+                <a href="@Model.CancelUrl" class="btn btn-secondary">@Model.CancelButtonText</a>
             }
-            <div class="btn-group">
-                <button type="submit"
-                        form="@Model.FormId"
-                        data-actionmode=@AdminConstants.ActionModeSaveAndClose
-                        class="btn btn-success me-0 header-action-btn">
-                    @GeneralResources.SaveAndCloseButtonText
-                </button>
-
-                <button type="button"
-                        class="btn btn-success dropdown-toggle dropdown-toggle-split"
-                        data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                    <span class="sr-only">Toggle Dropdown</span>
-                    <i class="mdi mdi-chevron-down"></i>
-                </button>
-
-                <div class="dropdown-menu">
+            @if (!string.IsNullOrEmpty(@Model.ActionName))
+            {
+                <div class="btn-group">
                     <button type="submit"
                             form="@Model.FormId"
-                            data-actionmode=@AdminConstants.ActionModeSave
-                            class="dropdown-item header-action-btn">
-                        @GeneralResources.SaveButtonText
+                            data-actionmode=@AdminConstants.ActionModeSaveAndClose
+                            class="btn btn-success me-0 header-action-btn">
+                        @GeneralResources.SaveAndCloseButtonText
                     </button>
+
+                    <button type="button"
+                            class="btn btn-success dropdown-toggle dropdown-toggle-split"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                        <span class="sr-only">Toggle Dropdown</span>
+                        <i class="mdi mdi-chevron-down"></i>
+                    </button>
+
+                    <div class="dropdown-menu">
+                        <button type="submit"
+                                form="@Model.FormId"
+                                data-actionmode=@AdminConstants.ActionModeSave
+                                class="dropdown-item header-action-btn">
+                            @GeneralResources.SaveButtonText
+                        </button>
+                    </div>
                 </div>
-            </div>
+            }
         </div>
     </div>
 </div>
