--- a/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/CreateEdit.cshtml
@@ -7,7 +7,7 @@
     DropdownViewModel paymentGatewayDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.PaymentGateway.ToString(), DropdownName = "PaymentGatewayId", DropdownSelectedValue = Model.PaymentGatewayId.ToString(), IsDisabled = Model.PaymentGatewayDetailId >= 0 };
     PageHeaderViewModel headerModel = new PageHeaderViewModel
     {
-        Title = Model.IsLiveMode ? $"{ViewBag.Title} Live Mode" : $"{ViewBag.Title} Test Mode",
+        Title = $"{ViewBag.Title} {(Model.IsLiveMode ? ": Live Mode" : ": Test Mode")}",
         SaveButtonText = GeneralResources.SaveButtonText,
         CancelUrl = @Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.CentreCode, SelectedParameter1 = @Model.PaymentGatewayId }),
         CancelButtonText = GeneralResources.CancelButtonText,
@@ -25,6 +25,7 @@
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
                         {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
                             @Html.HiddenFor(m => m.PaymentGatewayId)
                             @Html.HiddenFor(m => m.PaymentGatewayDetailId)
                             @Html.HiddenFor(m => m.CentreCode)
@@ -97,8 +98,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.CentreCode, SelectedParameter1 = @Model.PaymentGatewayId })" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            @* <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.CentreCode, SelectedParameter1 = @Model.PaymentGatewayId })" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
                         }
                     </div>
                 </div>
