--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/CreateEdit.cshtml
@@ -4,75 +4,67 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsDisabled = Model.AccGLSetupNarrationId >= 0 };
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName, new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccGLSetupNarrationId }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                @if (Model.AccGLSetupNarrationId > 0)
-                                {
-                                    <h4 class="card-title">
-                                            Update Narration Details
-                                    </h4>
-                                }
-                                else
-                                {
-                                    <h4 class="card-title">
-                                        Create Narration Details 
-                                    </h4>
-                                }
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div>
-                    <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-                        {
-                            @Html.HiddenFor(m => m.AccGLSetupNarrationId)
-                            @Html.HiddenFor(m => m.NarrationType)
-                            @Html.HiddenFor(m => m.CentreCode)
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required"  })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
-                                    </div>
+                <div class="card-body">
+                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                    {
+                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+
+                        @Html.HiddenFor(m => m.AccGLSetupNarrationId)
+                        @Html.HiddenFor(m => m.NarrationType)
+                        @Html.HiddenFor(m => m.CentreCode)
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                    @Html.ValidationMessageFor(x => x.CentreCode)
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.NarrationType, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.NarrationType, new { @class = "form-control", @readonly = "readonly" })
-                                        @Html.ValidationMessageFor(x => x.NarrationType)
-                                    </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.NarrationType, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.NarrationType, new { @class = "form-control", @readonly = "readonly" })
+                                    @Html.ValidationMessageFor(x => x.NarrationType)
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label " })
-                                        @Html.TextAreaFor(x => x.NarrationDescription, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.NarrationDescription)
-                                    </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label required" })
+                                    @Html.TextAreaFor(x => x.NarrationDescription, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.NarrationDescription)
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                        </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccGLSetupNarrationId })"
-                               class="btn btn-secondary">
-                                <i class="ft-x"></i>@AdminResources.LabelCancel
-                            </a>
-                        }
-                    </div>
+                        </div>
+                       @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                        <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccGLSetupNarrationId })"
+                           class="btn btn-secondary">
+                            <i class="ft-x"></i>@AdminResources.LabelCancel
+                        </a> *@
+                    }
                 </div>
             </div>
         </div>
