--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
@@ -14,22 +14,28 @@
     DropdownViewModel accSetupTransactionTypeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupTransactionType.ToString(), DropdownName = "AccSetupTransactionTypeId", DropdownSelectedValue = Model.AccSetupTransactionTypeId.ToString() };
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "AccGLTransaction.GetFinancialYearListByCentreCode()" };
     DropdownViewModel financialYearDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.FinancialYear.ToString(), DropdownName = "GeneralFinancialYearId", DropdownSelectedValue = Model.GeneralFinancialYearId.ToString(), Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}" : "" };
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName, new { SelectedParameter1 = Model.AccSetupBalanceSheetId }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = "transactionDetails",
+    };
 }
 
 <!-- Page Content -->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title">
-                            @(Model.AccGLTransactionId > 0 ? "Update Transaction" : "Create Transaction")
-                        </h4>
-                    </div>
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = "transactionDetails" }))
                         {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
                             @Html.AntiForgeryToken()
                             @Html.HiddenFor(x => x.AccSetupBalanceSheetId)
                             @Html.HiddenFor(x => x.TransactionDetailsData)
@@ -115,12 +121,12 @@
                                     </table>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-success" onclick="AccGLTransaction.SaveData()">@AdminResources.LabelSave</button>
+                            @* <button type="button" class="btn btn-success" onclick="AccGLTransaction.SaveData()">@AdminResources.LabelSave</button> *@
 
-                            <a href="@Url.Action("Cancel", controllerName, new { SelectedParameter1 = Model.AccSetupBalanceSheetId })"
+                           @*  <a href="@Url.Action("Cancel", controllerName, new { SelectedParameter1 = Model.AccSetupBalanceSheetId })"
                                class="btn btn-secondary">
                                 <i class="ft-x"></i>@AdminResources.LabelCancel
-                            </a>
+                            </a> *@
 
                         }
                     </div>
