--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
@@ -5,82 +5,76 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsDisabled = Model.AccSetupBalanceSheetId > 0 };
     DropdownViewModel accSetupBalanceSheetDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupBalanceSheetType.ToString(), DropdownName = "AccSetupBalanceSheetTypeId", DropdownSelectedValue = Model.AccSetupBalanceSheetTypeId.ToString() };
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName,new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccSetupBalanceSheetTypeId }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
-
 <!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                @if (Model.AccSetupBalanceSheetId > 0)
-                                {
-                                    <h4 class="card-title">Update Balance Sheet</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="card-title">Create Balance Sheet</h4>
-                                }
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div>
-                    <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-                        {
-                            @Html.HiddenFor(m => m.AccSetupBalanceSheetId)
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
-                                        @if (Model.AccSetupBalanceSheetId > 0)
-                                        {
-                                            @Html.HiddenFor(m => m.CentreCode)
-                                        }
-                                    </div>
+                <div class="card-body">
+                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                    {
+                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+                        @Html.HiddenFor(m => m.AccSetupBalanceSheetId)
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                    @Html.ValidationMessageFor(x => x.CentreCode)
+                                    @if (Model.AccSetupBalanceSheetId > 0)
+                                    {
+                                        @Html.HiddenFor(m => m.CentreCode)
+                                    }
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccSetupBalanceSheetTypeId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupBalanceSheetDropdown)
-                                        @Html.ValidationMessageFor(x => x.AccSetupBalanceSheetTypeId)
-                                    </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.AccSetupBalanceSheetTypeId, new { @class = "form-label required" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupBalanceSheetDropdown)
+                                    @Html.ValidationMessageFor(x => x.AccSetupBalanceSheetTypeId)
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.AccBalancesheetHeadDesc)
-                                    </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.AccBalancesheetHeadDesc, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.AccBalancesheetHeadDesc)
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccBalancesheetCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.AccBalancesheetCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
-                                        @Html.ValidationMessageFor(x => x.AccBalancesheetCode)
-                                    </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.AccBalancesheetCode, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.AccBalancesheetCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
+                                    @Html.ValidationMessageFor(x => x.AccBalancesheetCode)
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                        </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="@Url.Action("Cancel", controllerName,
-                                       new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccSetupBalanceSheetTypeId })"
-                               class="btn btn-secondary">
-                                <i class="ft-x"></i>@AdminResources.LabelCancel
-                           </a>
-                                                }
-                    </div>
+                        </div>
+                       @*  <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                        <a href="@Url.Action("Cancel", controllerName,
+                                                                                             new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccSetupBalanceSheetTypeId })"
+                       class="btn btn-secondary">
+                        <i class="ft-x"></i>@AdminResources.LabelCancel
+                    </a> *@
+                                        }
                 </div>
             </div>
         </div>
