--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminSanctionPost/Edit.cshtml
@@ -7,6 +7,7 @@
             {
                 Title = ViewBag.Title,
                 SaveButtonText = GeneralResources.SaveButtonText,
+                CancelUrl = @Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.CentreCode, SelectedDepartmentId = @Model.DepartmentId }),
                 CancelButtonText = GeneralResources.CancelButtonText,
                 ControllerName = controllerName,
                 ActionName = actionName,
